# Sennet

./: '  .clang-format  .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md  conanfile.py  docker-compose.yaml
Sennet/: CMakeLists.txt
Sennet/Example/: CMakeLists.txt  Client.cpp  Sandbox.cpp  Server.cpp
Sennet/Include/Platform/Linux/: LinuxSocket.hpp
Sennet/Include/Platform/Windows/: WindowsWindow.hpp
Sennet/Include/Sennet/Core/: Base.hpp  Log.hpp
Sennet/Include/Sennet/Debug/: Instrumentor.hpp
Sennet/Include/Sennet/Network/: Socket.hpp
Sennet/Include/Sennet/Renderer/: Buffer.hpp
Sennet/Include/Sennet/Synchronization/: Synchronizer.hpp
Sennet/Source/Platform/Linux/: LinuxInput.cpp  LinuxSocket.cpp  LinuxWindow.cpp
Sennet/Source/Platform/Windows/: WindowsWindow.cpp
Sennet/Source/Sennet/Core/: Window.cpp
Sennet/Source/Sennet/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp
Sennet/Source/Sennet/Network/: Socket.cpp
Sennet/Source/Sennet/Renderer/: Buffer.cpp  RendererAPI.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp
editor/: CMakeLists.txt  Editor.cpp  editor.cpp
editor/app/: CMakeLists.txt  Editor.cpp
editor/include/Editor/: EditorLayer.hpp
editor/include/editor/: editor_layer.hpp
editor/src/: EditorLayer.cpp  editor_layer.cpp
editor/src/Editor/: EditorLayer.cpp
examples/: CMakeLists.txt  Client.cpp  Sandbox.cpp  Server.cpp  sandbox.cpp  serial.cpp  server.cpp
lib/editor/: CMakeLists.txt
lib/editor/include/editor/: editor_layer.hpp
lib/editor/src/: editor_layer.cpp
lib/editor/src/editor/: camera.cpp  camera.hpp  editor.cpp  editor.hpp
lib/pine/: CMakeLists.txt
lib/pine/src/pine/: pch.hpp  pine.hpp
pine/: CMakeLists.txt
pine/include/Pine/: Pch.hpp  Pine.hpp
pine/include/Pine/Core/: Application.hpp  Assert.hpp  Base.hpp  Buffer.hpp  Input.hpp  KeyCodes.hpp  Layer.hpp  LayerStack.hpp  Log.hpp  MouseCodes.hpp  Timestep.hpp  Window.hpp
pine/include/Pine/Debug/: Instrumentor.hpp
pine/include/Pine/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
pine/include/Pine/Network/: Base.hpp  Client.hpp  Connection.hpp  Message.hpp  Server.hpp  Socket.hpp  TCP.hpp  TCPClient.hpp  TCPServer.hpp  ThreadSafeQueue.hpp  Types.hpp
pine/include/Pine/Renderer/: Buffer.hpp  Framebuffer.hpp  GraphicsContext.hpp  Image.hpp  OrthographicCamera.hpp  OrthographicCameraController.hpp  RenderCommand.hpp  Renderer.hpp  Renderer2D.hpp  RendererAPI.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp
pine/include/Pine/UI/: ImGuiImplGLFW.hpp  ImGuiImplOpenGL3.hpp  ImGuiImplOpenGL3Loader.hpp  ImGuiLayer.hpp  UI.hpp
pine/include/Pine/Utils/: FileSystem.hpp  Math.hpp  ThreadSafeQueue.hpp  locked_queue.hpp
pine/include/pine/: pine.hpp
pine/include/pine/core/: application.hpp  common.hpp  input.hpp  layer.hpp  layer_stack.hpp  log.hpp  mouse_codes.hpp  platform.hpp  timestep.hpp  window.hpp
pine/include/pine/debug/: instrumentor.hpp
pine/include/pine/events/: application_event.hpp  event.hpp  key_event.hpp  mouse_event.hpp
pine/include/pine/gui/: graphical_interface.hpp
pine/include/pine/network/: client.hpp  connection.hpp  server.hpp  types.hpp
pine/include/pine/renderer/: buffer.hpp  camera.hpp  common.hpp  framebuffer.hpp  graphics_context.hpp  image.hpp  orthographic_camera.hpp  quad_renderer.hpp  render_command.hpp  renderer.hpp  renderer_2d.hpp  renderer_api.hpp  shader.hpp  texture.hpp  vertex_array.hpp
pine/include/pine/ui/: common.hpp  imgui_layer.hpp
pine/include/pine/utils/: filesystem.hpp  locked_queue.hpp  math.hpp
pine/src/Core/: Application.cpp  Layer.cpp  LayerStack.cpp  Log.cpp
pine/src/Network/: Client.cpp  Connection.cpp  Server.cpp  Socket.cpp  TCP.cpp
pine/src/Platform/Linux/: LinuxInput.cpp  LinuxSocket.cpp  LinuxWindow.cpp
pine/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLFramebuffer.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp
pine/src/Platform/Windows/: WindowsInput.cpp  WindowsWindow.cpp
pine/src/Renderer/: Buffer.cpp  Framebuffer.cpp  GraphicsContext.cpp  Image.cpp  OrthographicCamera.cpp  OrthographicCameraController.cpp  RenderCommand.cpp  Renderer.cpp  Renderer2D.cpp  RendererAPI.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp
pine/src/UI/: ImGuiImplGLFW.cpp  ImGuiImplOpenGL3.cpp  ImGuiLayer.cpp  UI.cpp
pine/src/Utils/: FileSystem.cpp
pine/src/core/: application.cpp  layer.cpp  layer_stack.cpp  log.cpp
pine/src/gui/: common.cpp
pine/src/network/: client.cpp  connection.cpp  server.cpp
pine/src/platform/linux/: input.cpp  window.cpp
pine/src/platform/opengl/: buffer.cpp  context.cpp  framebuffer.cpp  renderer_api.cpp  shader.cpp  texture.cpp  vertex_array.cpp
pine/src/platform/windows/: input.cpp  window.cpp
pine/src/renderer/: buffer.cpp  camera.cpp  framebuffer.cpp  graphics_context.cpp  image.cpp  orthographic_camera.cpp  quad_renderer.cpp  render_command.cpp  renderer.cpp  renderer_2d.cpp  renderer_api.cpp  shader.cpp  texture.cpp  vertex_array.cpp
pine/src/ui/: common.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_layer.cpp
pine/src/utils/: filesystem.cpp
sennet/: CMakeLists.txt
sennet/include/Sennet/: Sennet.hpp
sennet/include/Sennet/Core/: Application.hpp  Base.hpp  Buffer.hpp  Log.hpp  MouseCodes.hpp
sennet/include/Sennet/Debug/: Instrumentor.hpp
sennet/include/Sennet/Renderer/: GraphicsContext.hpp  (+3 more)
sennet/src/Core/: LayerStack.cpp
sennet/src/Network/: Socket.cpp
sennet/src/Renderer/: GraphicsContext.cpp  RenderCommand.cpp  Renderer2D.cpp  RendererAPI.cpp  Shader.cpp  VertexArray.cpp
sennet/src/UI/: ImGuiImplOpenGL3.cpp
sennet/src/Utils/: FileSystem.cpp
src/: CMakeLists.txt
src/Editor/: CMakeLists.txt
src/Editor/app/: CMakeLists.txt  Editor.cpp
src/Sennet/: CMakeLists.txt
src/core/: CMakeLists.txt
src/editor/: CMakeLists.txt  editor.cpp
src/editor/src/: editor_layer.cpp
src/pine/: CMakeLists.txt
test/: CMakeLists.txt  test_uuid.cpp  test_window.cpp
tests/: CMakeLists.txt  test_engine.cpp  test_math.cpp  test_window.cpp
(+462 files in other folders)
